// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToAvro converts enum 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "name": "volume",
      "type": "float",
    },
    Object {
      "name": "power",
      "type": "int",
    },
    Object {
      "name": "fuel",
      "type": Object {
        "name": "fuel",
        "symbols": Array [
          "gasoline",
          "diesel",
          "lpg",
          "cng",
        ],
        "type": "enum",
      },
    },
  ],
  "name": "Engine",
  "namespace": "io.supermodel.factory.parts",
  "type": "record",
}
`;

exports[`convertToAvro converts inline object in property 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
        ],
        "name": "Engine",
        "type": "record",
      },
    },
  ],
  "name": "Article",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro converts required property 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
  ],
  "name": "Article",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by #/ 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
        ],
        "name": "Engine",
        "type": "record",
      },
    },
  ],
  "name": "Article",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by id 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
        ],
        "name": "Engine",
        "type": "record",
      },
    },
  ],
  "name": "Article",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by relative path 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
        ],
        "name": "Engine",
        "type": "record",
      },
    },
  ],
  "name": "Article",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs works with nested ref objects 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": Object {
        "fields": Array [
          Object {
            "name": "name",
            "type": "string",
          },
        ],
        "name": "Manufacturer",
        "type": "record",
      },
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
          Object {
            "name": "manufacturer",
            "type": Object {
              "fields": Array [
                Object {
                  "name": "name",
                  "type": "string",
                },
              ],
              "name": "Manufacturer",
              "type": "record",
            },
          },
        ],
        "name": "Engine",
        "type": "record",
      },
    },
  ],
  "name": "Article",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro simple type 1`] = `
Object {
  "doc": "Order model description",
  "fields": Array [
    Object {
      "doc": "A combination of date and time of day in the form [-]CCYY-MM-DDThh:mm:ss[Z|(+|-)hh:mm] (see Chapter 5.4 of ISO 8601).",
      "name": "timestamp",
      "type": "string",
    },
  ],
  "name": "Order",
  "namespace": "io.supermodel.david",
  "type": "record",
}
`;
